# opencode-meta

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF-2026-06-28.md  HANDOFF.md  README.md  ROADMAP.md  plan.md
.github/workflows/: release-linux.yml
archive/: plan.md
build-dev/: CMakeCache.txt  Makefile  cmake_install.cmake  opencode-meta-qt
build-dev/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-dev/opencode-meta-qt_autogen/: deps  mocs_compilation.cpp
build-dev/opencode-meta-qt_autogen/UVLADIE3JM/: moc_MainWindow.cpp.d
build-dev/opencode-meta-qt_autogen/YPKJ5OE7LN/: moc_ModelsBrowserWidget.cpp  moc_ModelsBrowserWidget.cpp.d  moc_ProfileEditorDialog.cpp  moc_ProfileEditorDialog.cpp.d  moc_ProfilesWidget.cpp.d  moc_ProjectsWidget.cpp  moc_ProjectsWidget.cpp.d  moc_TemplateEditorDialog.cpp  moc_TemplateEditorDialog.cpp.d  moc_TemplatesWidget.cpp  moc_TemplatesWidget.cpp.d
docs/: PARADIGM.md
docs/archive/: ROADMAP-2026-06-28-pre-compliance-plan.md
docs/plan/: 2026-06-29-stock-agent-fidelity.md
legacy/: generation.cpp  generation.h
legacy/adapter/: OpencodeSchemaAdapter.cpp  OpencodeSchemaAdapter.h
legacy/models/: Profile.cpp  Profile.h
legacy/ui/: ApplyProfileDialog.cpp  ApplyProfileDialog.h  ProfileCompareDialog.cpp  ProfileCompareDialog.h  ProfileEditorDialog.cpp  ProfileEditorDialog.h  ProfilesWidget.h  TemplateEditorDialog.cpp
scripts/: acceptance-phase-h.sh  ci_smoke_trio.sh
src/: MainWindow.cpp  MainWindow.h  apply_helpers.cpp  apply_helpers.h  generation.cpp  generation.h
src/generation/: AgentMarkdown.cpp  AgentMarkdown.h  ContractChecker.cpp  ContractChecker.h  ProviderCatalog.cpp  ProviderCatalog.h  TeamRenderer.cpp  TeamRenderer.h
src/models/: ModelInfo.h  ProjectRecord.h  Role.cpp  Role.h  Specialist.cpp  Specialist.h  Team.cpp  Team.h  TeamVersion.cpp  TeamVersion.h  Template.cpp  Template.h  Trial.cpp  Trial.h
src/storage/: ImportExportManager.cpp  ImportExportManager.h  StorageManager.cpp  StorageManager.h
src/ui/: AddSpecialistDialog.cpp  AddSpecialistDialog.h  ApplyProfileDialog.cpp  ConfigInspector.cpp  ConfigInspector.h  ConfirmApplyDialog.cpp  ConfirmApplyDialog.h  EditSpecialistDialog.cpp  EditSpecialistDialog.h  FilterBar.cpp  FilterBar.h  ImportExportDialog.cpp  ImportExportDialog.h  KeyboardShortcutsDialog.cpp  KeyboardShortcutsDialog.h  LabOverviewWidget.cpp  LabOverviewWidget.h  ModelsBrowserWidget.cpp  ModelsBrowserWidget.h  ParadigmHelpDialog.cpp  ParadigmHelpDialog.h  ProfilesWidget.cpp  ProfilesWidget.h  ProjectsWidget.cpp  ProjectsWidget.h  PromptPreview.cpp  PromptPreview.h  ProviderSubscriptionDialog.cpp  ProviderSubscriptionDialog.h  RoleEditorDialog.cpp  RoleEditorDialog.h  RolesWidget.cpp  RolesWidget.h  SettingsDialog.cpp  SettingsDialog.h  StatusBar.cpp  StatusBar.h  TeamEditorWidget.cpp  TeamEditorWidget.h  TeamHistoryDialog.cpp  (+13 more)
tests/: CMakeLists.txt  test_agent_markdown.cpp  test_apply.cpp  test_apply_team.cpp  test_bundle.cpp  test_bundle_dialog.cpp  test_compliance_signoff.cpp  test_confirm_apply_dialog.cpp  test_contract_checker.cpp  test_cross_view_smoke.cpp  test_edit_specialist_dialog.cpp  test_generation.cpp  test_keyboard_shortcuts.cpp  test_legacy_storage_unaffected_by_seed.cpp  test_list_filter.cpp  test_main_window_menus.cpp  test_models.cpp  test_models_browser.cpp  test_opencode_schema_adapter.cpp  test_paradigm_help.cpp  test_profile_compare.cpp  test_provider_catalog.cpp  test_role_editor_dialog.cpp  test_roles_storage.cpp  test_runtime_opencode_debug.cpp  test_seed_opt_out_path.cpp  test_seed_stock_fidelity.cpp  test_settings_dialog.cpp  test_starter_team_apply.cpp  test_status_bar.cpp  test_stock_item_info.cpp  test_team_editor_widget.cpp  test_team_history_dialog.cpp  test_team_history_storage.cpp  test_team_renderer.cpp  test_team_renderer_tools_deprecation_banner_in_editor.cpp  test_teams_storage.cpp  test_templates.cpp  test_trial_compare_dialog.cpp  test_trials_storage.cpp
